# libsde-utils-x11

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  sde-utils-gtk-1.0.pc.in  sde-utils-x11-0.pc.in  sde-utils-x11-1.0.pc.in
include/: Makefile.am  Makefile.in  sde-utils-x11.h
include/sde-utils-x11/: atom_names.h  atoms.h  utils.h
src/: .CMakeLists.txt.un~  .utils.c.un~  .utils.h.un~  CMakeLists.txt  Makefile.am  Makefile.in  atoms.c  atoms.h  config.c  config.h  gdk-pixbuf.c  gdk-pixbuf.h  gdkrgba.c  icon-grid.c  icon-grid.h  pixbuf-stuff.c  pixbuf-stuff.c.bu  pixbuf-stuff.h  sde-utils-gtk.h  sde-utils-x11.h  utils.c  utils.h
